Fixed dark mode

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ li {
     flex-grow: 1;
     cursor: pointer;
     font-size: 1rem;
-    color: #f8f8f8;
+    color: var(--text);
     transition: 0.3s ease;
   }
   
